package aimene.doex.bestelling.service;

import org.springframework.stereotype.Service;

@Service
public class ProductService {

}
